# Smart_Hub

./: CMakeLists.txt
smart_home_display/: CMakeLists.txt  main.cpp
smart_home_display/inc/: AlexaApplicaion.ui  Device.h  DeviceControls.ui  SmartHub.h  mainwindow.ui
smart_home_display/src/: Device.cpp  SmartHub.cpp  SmartHub.ui
